fixed content alignment on 1440

--- a/src/Components/Destination/destination.css
+++ b/src/Components/Destination/destination.css
@@ -39,12 +39,12 @@
     justify-content: center;
     align-items: flex-end;
     gap: 10rem;
+
 }
 
 .destination-content {
     width: 445px;
     height: 472px;
-    margin-right: 10rem;
 }
 
 .destination-nav {
